--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/heroku/node-js-sample"
+		"url": "https://github.com/happymap/foodtruck.git"
 	},
 	"dependencies": {
 		"express": "^4.13.3"
