--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
 		"url": "https://github.com/happymap/foodtruck.git"
 	},
 	"dependencies": {
-		"express": "^4.13.3"
+		"express": "^4.13.3",
+		"mysql": "2.9.0",
+		"sequelize": "3.11.0"
 	}
 }
