--- a/client/foodtruck/foodtruck/Info.plist
+++ b/client/foodtruck/foodtruck/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string></string>
+	<string>TruckNow</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -31,6 +31,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>always use</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>when is use</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
@@ -49,9 +53,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>when is use</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>always use</string>
 </dict>
 </plist>
